--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-pepperoni
-sqlalchemy
-cx_Oracle
-paramiko
-flask
-flask_httpauth
-waitress
-sqlparse
-gitpython
+pepperoni==0.2.1
+SQLAlchemy==1.4.46
+cx-Oracle==8.3.0
+paramiko==3.0.0
+Flask==2.2.2
+Flask-HTTPAuth==4.7.0
+waitress==2.1.2
+sqlparse==0.4.3
+GitPython==3.1.30
